--- a/pr-build-pipeline.yml
+++ b/pr-build-pipeline.yml
@@ -2,3 +2,37 @@
 # Build and test ASP.NET projects.
 # Add steps that publish symbols, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
+
+pr:
+    branches:
+        include:
+            - main
+pool:
+    vmImage: 'ubuntu-latest'
+variables:
+    solution: '**/*.sln'
+    buildConfiguration: 'Release'
+steps:
+    - task: UseDotNet@2
+      displayName: 'use dotnet cli'
+      inputs:
+          packageType: 'sdk'
+          version: '8.0.x'
+    - task: DotNetCoreCLI@2
+      displayName: 'dotnet build'
+      inputs:
+          command: 'build'
+          arguments: '--configuration $(buildconfiguration)'
+          projects: '$(solution)'
+    - task: DotNetCoreCLI@2
+      displayName: 'dotnet test -unit tests'
+      inputs:
+          command: 'test'
+          arguments: '--configuration $(buildConfiguration) --no-build --no-restore --logger trx --collect "Code coverage"'
+          projects: '**/*.UnitTests.csproj'
+    - task: DotnetCoreCLI@2
+      displayName: 'dotnet test -itegration tests'
+      inputs:
+        command: 'test'
+        arguments: '--configuration $(buildConfiguration) --no-build --no-restore --logger trx --collect "Code coverage"'
+        projects: '**/*.IntegrationTests.csproj'
