--- a/pr-build-pipeline.yml
+++ b/pr-build-pipeline.yml
@@ -7,8 +7,8 @@ pr:
     branches:
         include:
             - main
-pool:
-    vmImage: 'ubuntu-latest'
+pool: 'linux-self-hosted-agent-pool'
+
 variables:
     solution: '**/*.sln'
     buildConfiguration: 'Release'
