Update pr-build-pipeline.yml for Azure Pipelines

--- a/pr-build-pipeline.yml
+++ b/pr-build-pipeline.yml
@@ -8,6 +8,8 @@ pr:
     branches:
         include:
             - main
+            - master
+            - development
 pool: 'linux-self-hosted-agent-pool'
 
 variables:
