--- a/docker-build-pipeline.yml
+++ b/docker-build-pipeline.yml
@@ -12,14 +12,14 @@ resources:
 
 variables:
   # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: 'bcf5d0be-d489-4f72-90ff-927c36d0ceb4'
+  dockerRegistryServiceConnection: 'AcrAzurePipelineDemo'
   imageRepository: 'myazurepipelinesdemo'
   containerRegistry: 'devopscrlabluis.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/src/MyBasicWebApiDemo/Dockerfile'
   tag: '$(Build.BuildId)'
 
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
+  # Agent
+  Self-Hosted-Agent: 'linux-self-hosted-agent-pool'
 
 stages:
 - stage: Build
@@ -27,8 +27,7 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-    pool:
-      vmImage: $(vmImageName)
+    pool: $(Self-Hosted-Agent)
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
