--- a/pr-build-pipeline.yml
+++ b/pr-build-pipeline.yml
@@ -4,6 +4,9 @@
 # https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
 
 trigger: none
+paths:
+  exclude:
+  - *.yml
 pr:
     branches:
         include:
