--- a/release-pipeline.yml
+++ b/release-pipeline.yml
@@ -3,17 +3,12 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-trigger:
-- master
+trigger: none
+pr: none
 
-pool:
-  vmImage: ubuntu-latest
+pool: 'linux-self-hosted-agent-pool'
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+variables:
+  containerRegistry: 'devopscrlabluis.azurecr.io'
+  imagerepository: 'myazurepipelinesdemo'
+  tag: 'latest'
